<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="net.hsrtech.keepscore.MainActivity">

        <ToggleButton
            android:id="@+id/teamToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/team"
            android:textAllCaps="false"
            android:textOff="@string/team2Title"
            android:textOn="@string/team1Title"
            android:textSize="@dimen/baseHeading"
            android:textStyle="bold"
            android:visibility="visible" />

    <TextView
        android:id="@+id/runs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="false"
        android:text="@string/runs"
        android:textSize="@dimen/baseHeading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/runOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/one" />

            <Button
                android:id="@+id/runThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/three" />

            <Button
                android:id="@+id/runFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/five" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2Bies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/runTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/two" />

            <Button
                android:id="@+id/runFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/four" />

            <Button
                android:id="@+id/runSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/six" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:selectAllOnFocus="false"
        android:text="@string/boundaries"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/baseHeading"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boundrySix"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:onClick="addScore"
            android:text="@string/six" />

        <Button
            android:id="@+id/boundryFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addScore"
            android:text="@string/four" />

    </LinearLayout>

        <ToggleButton
            android:id="@+id/biesToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:checked="true"
            android:textAllCaps="false"
            android:textSize="@dimen/baseHeading"
            android:textStyle="bold"
            android:textOff="@string/LegBiesTitle"
            android:textOn="@string/BiesTitle"
            android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/biesOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/one" />

            <Button
                android:id="@+id/biesThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/three" />

            <Button
                android:id="@+id/biesFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/five" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/biesTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/two" />

            <Button
                android:id="@+id/biesFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/four" />

            <Button
                android:id="@+id/biesSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScore"
                android:text="@string/six" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

</ScrollView>
